--- a/frontallenway/fallenway/views/admin/article/articleManageIndex.html
+++ b/frontallenway/fallenway/views/admin/article/articleManageIndex.html
@@ -39,7 +39,7 @@
                     <td>Operation2</td>
                 </thead>
                 <tbody>
-                    {% for article in articles %}
+                    {% for article in data.articles %}
                     <tr>
                         <td>{{article.title}}</td>
                         <td>{{article.classify.name}}</td>
