--- a/frontallenway/fallenway/views/visitor/common/header_leftSide.html
+++ b/frontallenway/fallenway/views/visitor/common/header_leftSide.html
@@ -33,7 +33,7 @@
                         <li><a href = "/"><i class = "fa fa-angle-right"></i>{{classify.name}} ({{classify.articleNum}})</a></li>
                     {% endfor %}
 
-                    <li><a href = "/aboutme"><i class = "fa fa-angle-right"></i>关于 About Me </a></li>
+                    <li><a href = "/visitor/aboutme"><i class = "fa fa-angle-right"></i>关于 About Me </a></li>
                 </ul>
             </div>
 
