--- a/frontallenway/fallenway/views/visitor/index.html
+++ b/frontallenway/fallenway/views/visitor/index.html
@@ -13,7 +13,7 @@
                     <a href="#">{{article.classifyName}}</a>
                 </span><!-- End .entry-tags -->
                 <span class="entry-separator">/</span>
-                <a href="#" class="entry-comments">10 Comments</a>
+                <a href="#" class="entry-comments">{{article.commentNum}} Comments</a>
                 <span class="entry-separator">/</span>
                 by <a href="#" class="entry-author">Allen</a>
                                 
