ADD Swagger 管理API

--- a/frontallenway/fallenway/views/admin/bug/bugIndex.html
+++ b/frontallenway/fallenway/views/admin/bug/bugIndex.html
@@ -23,7 +23,7 @@
             <td>Date</td>
          </thead>
         <tbody>
-            {% for bug in bugs %}
+            {% for bug in data.bugs %}
             <tr>
                 <td>{{bug.ex}}</td>
                 <td>{{bug.requestUrl}}</td>
