--- a/frontallenway/fallenway/views/admin/operation/operIndex.html
+++ b/frontallenway/fallenway/views/admin/operation/operIndex.html
@@ -25,7 +25,7 @@
             <td>Date</td>
          </thead>
         <tbody>
-            {% for record in records %}
+            {% for record in data.records %}
             <tr>
                 <td>{{record.remoteAddress}}</td>
                 <td>{{record.remoteHost}}</td>
