--- a/frontallenway/fallenway/views/admin/article/articleManageIndex.html
+++ b/frontallenway/fallenway/views/admin/article/articleManageIndex.html
@@ -42,7 +42,7 @@
                     {% for article in data.articles %}
                     <tr>
                         <td>{{article.title}}</td>
-                        <td>{{article.classify.name}}</td>
+                        <td>{{article.classifyName}}</td>
                         <td><a href = "/admin/article/modifyArticle?id={{article.id}}">修改文章</a></td>
                         <td><a href = "/admin/article/deleteArticle?id={{article.id}}">删除文章</a></td>
                     </tr>
