--- a/frontallenway/fallenway/views/admin/login.html
+++ b/frontallenway/fallenway/views/admin/login.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel = "stylesheet" href = "../stylesheets/bootstrap.min.css">
+        <link rel = "stylesheet" href = "/stylesheets/bootstrap.min.css">
 
         <style type = "text/css">
 .login_box{
@@ -33,9 +33,9 @@
     </head>
     <body style = "background-color:#f3f3f4">
         <div style = "margin:0 auto;padding:100px 20px 20px">
-            <h2 style = "text-align:center;font-weight:100;font-size:24">Kong Login</h2>
+            <h2 style = "text-align:center;font-weight:100;font-size:24">Admin Login</h2>
             <div class = "login_box">
-                <form class = "login_form" action = "/admin/login/" method = "POST">
+                <form class = "login_form" action = "/admin/login/dologin" method = "POST">
                     <div style = "margin-bottom:15px;">
                         <input class = "form-control input_style" type = "text" name = "username" placeholder = "username">
                     </div>
