--- a/frontallenway/fallenway/views/visitor/common/header.html
+++ b/frontallenway/fallenway/views/visitor/common/header.html
@@ -19,7 +19,7 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <h1><a href = "/visitor">Allen Way </a><small class="hidden-xs"></small></h1>
-                                <p class="page-header-desc">Talk is cheap , show me the code !</p>
+                                <p class="page-header-desc">It's easy to say, hard to do !</p>
                             </div>
                             <div class="col-md-6">
                                 <ol class="breadcrumb">
